[workspace]
members = [
    "crates/valence-core",
    "crates/valence-crypto",
    "crates/valence-protocol",
    "crates/valence-network",
    "crates/valence-node",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ourochronos/valence-network-rs"

[workspace.dependencies]
# Crypto
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async
tokio = { version = "1", features = ["full"] }

# Networking
libp2p = { version = "0.55", features = ["tokio", "noise", "gossipsub", "mdns", "dns", "tcp", "yamux", "identify", "kad"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Data structures
uuid = { version = "1", features = ["v4", "serde"] }
hex = "0.4"

# Erasure coding
reed-solomon-erasure = "6"

# Internal crates
valence-core = { path = "crates/valence-core" }
valence-crypto = { path = "crates/valence-crypto" }
valence-protocol = { path = "crates/valence-protocol" }
valence-network = { path = "crates/valence-network" }
