[package]
name = "valence-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
valence-core = { workspace = true }
