[package]
name = "valence-network"
version.workspace = true
edition.workspace = true

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
valence-core = { workspace = true }
valence-crypto = { workspace = true }
valence-protocol = { workspace = true }
