[package]
name = "valence-network"
version.workspace = true
edition.workspace = true

[dependencies]
libp2p = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
reed-solomon-erasure = { workspace = true }
base64 = { workspace = true }
valence-core = { workspace = true }
valence-crypto = { workspace = true }
valence-protocol = { workspace = true }

[dev-dependencies]
tempfile = "3"
