[package]
name = "valence-node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "valence-node"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
valence-core = { workspace = true }
valence-crypto = { workspace = true }
valence-protocol = { workspace = true }
valence-network = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
libc = { workspace = true }

[dev-dependencies]
tempfile = "3"
